# mesme

./: .travis.yml  CMakeLists.txt  concept.md  mesme.py  readme.md  template.db
core/: common.py  create_task_dialog.py  create_user_dialog.py  database_connector.py  database_types.py  login_screen.py  main_window.py  track_screen.py  user_management.py  user_profile.py  widgets.py
core/widgets/: __init__.py  create_task_dialog.py  create_user_dialog.py  delete_task_dialog.py  ok_cancel_dialog.py  task_list.py  task_widget.py  tracking_controls.py  week_time_edit.py
src/: mesme.cpp  mesme.qrc
src/ui/: mmMainWindow.cpp  mmMainWindow.h  mmMainWindow.qml
test/: __init__.py  test_database.py
ui/: login_screen.py  screen.py  track_screen.py
